# wordle

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-install.sh
notebooks/: analyze.ipynb
src/: play.ipynb  prep_data.py  wordle.py
wordle/: fh-app.py  fh_app.py  prep_data.py  wordle.py
wordle/assets/: wordle.css  wordle.js
wordle/data/: all_word_curl_wordle_5.json
